<resources>
    <string name="app_name">Shopneo</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registerInstead">Register Instead</string>
    <string name="loginInstead">Login Instead</string>
    <string name="orderHistory">Order History</string>
    <string name="orderID">Order ID:</string>
    <string name="orderAddress">Address:</string>
    <string name="orderName">Name:</string>
    <string name="orderItems">Items:</string>
    <string name="orderTotal">Total:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LoremIpsum">LoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsumLoremIpsum</string>
    <string name="cart">Cart</string>
    <string name="priceTotal">Total Price:</string>
    <string name="orderPostalCode">Postal Code</string>
    <string name="orderCity">City</string>
    <string name="orderHomeAddress">Home Address</string>
    <string name="orderButton">Order</string>
    <string name="orderData">Order Data</string>
    <string name="addToCart">Add to Cart</string>
    <string name="cartEmpty">Your cart is empty!</string>
    <string name="passwordsDontMatch">Passwords don\'t match!</string>
    <string name="fillInAllFields">Please fill in all fields!</string>
    <string name="emailAlreadyExists">This email is already registered!</string>
    <string name="accountAlreadyExists">This account already exists!</string>
</resources>