<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.fragment.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".login.LoginActivity"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:text="@string/register"
                android:textSize="70sp"
                android:textAllCaps="true"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textAllCaps="true"/>

                <EditText
                    android:id="@+id/registerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/surname"
                    android:textSize="20sp"
                    android:textAllCaps="true"/>

                <EditText
                    android:id="@+id/registerSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/dateOfBirth"
                    android:textSize="20sp"
                    android:textAllCaps="true"/>

                <EditText
                    android:id="@+id/registerDoB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="date"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/phoneNumber"
                    android:textSize="20sp"
                    android:textAllCaps="true"/>

                <EditText
                    android:id="@+id/registerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="phone"
                    android:singleLine="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:textAllCaps="true"/>

                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/password"
                    android:textSize="20sp"
                    android:textAllCaps="true"/>

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/confirmPassword"
                    android:textSize="20sp"
                    android:textAllCaps="true"/>

                <EditText
                    android:id="@+id/registerConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/register"
                android:textSize="30sp" />

            <Button
                android:id="@+id/loginInsteadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/loginInstead"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>